Added initial in code OCR functionality by integrating Tesseract.

--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ subprojects {
     }
     dependencies {
         testCompile group:'junit', name:'junit', version:'4.12'
+
+        compile group: 'org.bytedeco', name: 'javacv-platform', version: '1.5.2'
     }
 
     buildDir = new File('./target')
